--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fuel-station-manager",
   "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
